samples/_failures_safe/1761422785_4de55e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45435811.c: In function ‘main’:
./samples/SAFE/__tmp_45435811.c:147:9: error: expected declaration or statement at end of input
  147 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_45435811.c:147:9: error: expected declaration or statement at end of input
